--- a/controlpanel/app/templates/dashboard.html
+++ b/controlpanel/app/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block extra_css %}
+{% block extra_head %}
 <link rel="stylesheet" href="/css/dashboard.css">
 {% endblock %}
 
