UPD TO PYTHON 3.12 Silksong fe almost done. Be endpoint added Preparing for a huge refactoring to separate both projects

--- a/controlpanel/app/static/css/silksong.css
+++ b/controlpanel/app/static/css/silksong.css
@@ -46,6 +46,13 @@ h6 > a:hover {
     text-decoration: underline;
 }
 
+.dc-btn-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 7px;
+}
+
 .dc-embed {
     border-left: 5.5px solid #CF540B ! important;
     border-radius: 5px;
