--- a/controlpanel/app/templates/silksong.html
+++ b/controlpanel/app/templates/silksong.html
@@ -43,11 +43,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                    <div class="col mt-3">
-                            <button id="dc-embed-new-preview-btn" class="dc-btn dc-btn-primary dc-embed-preview-btn">Preview</button>
-                            <button id="dc-embed-new-edit-btn" class="dc-btn dc-btn-primary dc-embed-edit-btn" disabled="">Edit</button>
-                        </div>
+                    <div class="dc-btn-container mt-3">
+                        <button id="dc-embed-new-preview-btn" class="dc-btn dc-btn-primary dc-embed-preview-btn">Preview</button>
+                        <button id="dc-embed-new-edit-btn" class="dc-btn dc-btn-primary dc-embed-edit-btn" disabled>Edit</button>
+                        <button id="dc-embed-new-save-btn" class="dc-btn dc-btn-success dc-embed-save-btn">Create</button>
                     </div>
                 </div>
             </div>
