--- a/controlpanel/web/templates/silksong.html
+++ b/controlpanel/web/templates/silksong.html
@@ -1,27 +1,35 @@
 {% extends "base.html" %}
 {% block title %} Silksong news {% endblock %}
 {% block extra_head %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.19/dist/css/tempus-dominus.min.css" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.19/dist/js/tempus-dominus.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.19/dist/js/jQuery-provider.js"></script>
+<link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.19/dist/css/tempus-dominus.min.css"
+    crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.19/dist/js/tempus-dominus.min.js"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.19/dist/js/jQuery-provider.js"></script>
 
-    <link rel="stylesheet" href="/css/silksong.css" type="text/css">
+<link rel="stylesheet" href="/css/silksong.css" type="text/css">
 {% endblock %}
 
 {% block headed_body %}
 <div class="body-container">
     {{ self.header() }}
-    <div class="container py-3 rounded dc-embed-container mb-3 mb-md-5 scrollable-container">
-        <div class="row flex-nowrap mb-5">
-            <div class="col-auto">
-                <img src='{{ user_avatar }}' class="rounded-circle" style="max-width: 50px;"></img>
+    <div class="container-md pb-3 pt-4 ps-4 radius-sm-0 rounded dc-embed-container mb-3 mb-md-5 scrollable-container">
+        {% for news in news_list %}
+        {% set is_new = news.id == "new" %}
+        <div class="row flex-nowrap {% if not loop.last %} mb-5 {% endif %} news-item" {%- if not is_new -%}
+            style="display: none;" {%- endif -%}>
+            <div class="col-auto px-0 px-sm-2">
+                <img src='{{ news.author.avatar_url }}' class="rounded-circle dc-avatar" style="max-width: 50px;"></img>
             </div>
             <div class="col">
                 <div class="container">
                     <div class="row mb-2">
-                        <div class="col-auto ps-0">{{ username }}</div>
-                        <div class="col-auto align-self-center dc-timestamp ps-1">Today at 12:15 PM{#{ news.created_on|date:"d/m/Y" }#}</div>
+                        <div class="col-auto ps-0">{{ news.author.username }}</div>
+                        <div class="col-auto align-self-center dc-timestamp ps-1">{{ news.created_at|verbose_near_date
+                            }}</div>
                     </div>
                     <div class="row">
                         <div class="card border-0 dc-embed">
@@ -29,67 +37,99 @@
                                 <div class="col ps-2">
                                     <div class="card-body px-0 h-100 d-flex flex-column">
                                         <h6 class="ps-1">
-                                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Daily Silksong News</a>
-                                            <div id="dc-embed-new-date-btn" class="dc-btn dc-btn-primary dc-text-btn ms-3 dc-embed-date-btn" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Change the date of the news">
+                                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Daily Silksong
+                                                News</a>
+                                            <div id="dc-embed-{{ news.id }}-date-btn"
+                                                class="dc-btn dc-btn-primary dc-text-btn ms-3 dc-embed-date-btn"
+                                                data-bs-toggle="tooltip" data-bs-placement="top"
+                                                data-bs-title="Change the date of the news">
                                                 <i class="bi bi-calendar-date"></i>
                                             </div>
                                         </h6>
-                                        <p id="dc-embed-new" class="dc-news-body card-text flex-grow-1 text-break rounded-1 ps-1" before-text="Today is {{ date }}. There are silksong news today! " contenteditable="true" data-original=""><br></p>
-                                    </div>
-                                </div>
-                                <div class="col-auto p-3 ps-0 ms-auto">
-                                    <img class='dc-embed-thumbnail rounded' src="https://sm.ign.com/t/ign_nordic/cover/h/hollow-kni/hollow-knight-silksong_46ud.128.jpg"></img>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dc-btn-container mt-3">
-                        <button id="dc-embed-new-preview-btn" class="dc-btn dc-btn-primary dc-embed-preview-btn">Preview</button>
-                        <button id="dc-embed-new-edit-btn" class="dc-btn dc-btn-primary dc-embed-edit-btn" disabled>Edit</button>
-                        <button id="dc-embed-new-save-btn" class="dc-btn dc-btn-success dc-embed-save-btn">Create</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row flex-nowrap">
-            <div class="col-auto">
-                <img src='{{ user_avatar }}' class="rounded-circle" style="max-width: 50px;"></img>
-            </div>
-            <div class="col">
-                <div class="container">
-                    <div class="row mb-2">
-                        <div class="col-auto ps-0">{{ username }}</div>
-                        <div class="col-auto align-self-center dc-timestamp ps-1">09/23/2023 9:37 AM{#{ news.created_on|date:"d/m/Y" }#}</div>
-                    </div>
-                    <div class="row">
-                        <div class="card border-0 dc-embed">
-                            <div class="row flex-nowrap">
-                                <div class="col ps-2">
-                                    <div class="card-body px-0 h-100 d-flex flex-column">
-                                        <h6 class="ps-1"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Daily Silksong News</a></h6>
-                                        <p class="dc-news-body card-text flex-grow-1 text-break rounded-1 ps-1" before-text="Today is September 23rd 2023. There are silksong news today! " contenteditable="false">
-                                            Well... kinda...
-                                            The silksong steam page was updated they added a new game logo required for seasonal steam events and updated the background image of the page.
-                                            <br><br>
-                                            More info: https://youtu.be/MXwgo-JHYPQ?si=hsVv5Y7RXVmX8RlH
+                                        <span class="content-editable-error-label" style="display: none;">
+                                            Unfortunately discord limits their message length to 2000 characters. You
+                                            reached this limit.
+                                            <!-- The next tag is lined weirdly. That is intented!!! Do not format!!!
+                                                 The reason is that otherwise the tooltip won't show newlines correctly 
+                                             -->
+                                            <i class="bi bi-exclamation-circle" data-bs-toggle="tooltip"
+                                                data-bs-placement="right"
+                                                data-bs-title="-But I counted and there are only 1750 characters in this texbox!!!
+*Sight* Yes... that's true...
+The reason is that there will be more text that eventually will be inserted into the real message besides the one you are texting here. So I would recommend you to stop wasting your time counting characters and to go touch some grass instead.">
+                                            </i>
+                                        </span>
+                                        <p id="dc-embed-{{ news.id }}"
+                                            class="dc-news-body card-text flex-grow-1 text-break rounded-1 ps-1"
+                                            before-text="This will magically update :)" contenteditable="true"
+                                            data-original="" data-date="{{ news.date.isoformat() }}">
+                                            {%- if news.message is none -%}
+                                            <br>
+                                            {%- else -%}
+                                            {{ news.message }}
+                                            {%- endif -%}
                                         </p>
                                     </div>
+
                                 </div>
                                 <div class="col-auto p-3 ps-0 ms-auto">
-                                    <img class='dc-embed-thumbnail rounded' src="https://sm.ign.com/t/ign_nordic/cover/h/hollow-kni/hollow-knight-silksong_46ud.128.jpg"></img>
+                                    <img class='dc-embed-thumbnail rounded'
+                                        src="https://sm.ign.com/t/ign_nordic/cover/h/hollow-kni/hollow-knight-silksong_46ud.128.jpg"></img>
                                 </div>
                             </div>
                         </div>
+                        {%- if news.id != 'new' -%}
+                        <div class="col-sm-1 px-0 d-none d-lg-flex flex-row dc-embed-drawer dc-right-slider-80">
+                            <div class="dc-embed-drawer-body d-flex flex-column">
+                                <div class="flex-grow-1 m-2 mb-0">
+                                    <div class="btn btn-warning btn-sm p-0 w-100 h-100 dc-embed-edit-mode-btn"
+                                        id="dc-embed-{{ news.id }}-edit-mode-btn">
+                                        <span class="position-relative d-block top-50 translate-middle-y">
+                                            <i class="bi bi-pencil-square"></i> Edit
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="flex-grow-1 m-2">
+                                    <form action="/silksong/{{ news.id }}//delete" method="post" class="w-100 h-100">
+                                        <button class="btn btn-danger btn-sm p-0 w-100 h-100 dc-embed-delete-btn"
+                                            type="submit">
+                                            <span class="position-relative d-block">
+                                                <i class="bi bi-trash"></i> Delete
+                                            </span>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="dc-embed-drawer-handle">
+                                <div class="position-relative top-50 start-50 translate-middle fit-content"><i
+                                        class="bi bi-chevron-right"></i></div>
+                            </div>
+                        </div>
+                        {%- endif -%}
+
+                    </div>
+                    <div class="dc-btn-container mt-3" {% if not is_new %}style="display: none;"{% endif %}>
+                        <button id="dc-embed-{{ news.id }}-preview-btn"
+                            class="dc-btn dc-btn-primary dc-embed-preview-btn">Preview</button>
+                        <button id="dc-embed-{{ news.id }}-edit-btn"
+                            class="dc-btn dc-btn-primary dc-embed-edit-btn"
+                            style="display: none;">Edit</button>
+   
+                        <button id="dc-embed-{{ news.id }}-save-btn" 
+                            class="dc-btn dc-btn-success dc-embed-save-btn" 
+                            data-news-id="{{ news.id }}">
+                            {{ 'Create' if is_news else 'Save'}}
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
 
 {% endblock %}
 
 {% block extra_js %}
-    <script src="/js/silksong.js"></script>
+<script src="/js/silksong.js"></script>
 {% endblock %}
-```
