--- a/controlpanel/web/static/css/base.css
+++ b/controlpanel/web/static/css/base.css
@@ -10,3 +10,10 @@ nav img {
     width: fit-content;
     height: fit-content;
 }
+
+.alert-dismiss-btn {
+    position: absolute;
+    font-size: 10px;
+    top: 3px;
+    left: 3px;
+}
