--- a/controlpanel/web/static/css/silksong.css
+++ b/controlpanel/web/static/css/silksong.css
@@ -188,7 +188,7 @@ button.dc-btn:enabled:hover,
 
 
 .dc-right-slider-80 {
-    transform: translateX(-80%);
+    transform: translateX(-83%);
     transition: transform 0.2s ease-in-out;
 }
 
@@ -198,17 +198,19 @@ button.dc-btn:enabled:hover,
 }
 
 .dc-embed-drawer{
+    max-height: 150px;
+    width: 100px;
     background-color: #2B2D31;
     border-radius: 0px 5px 5px 0px;
 }
 
 
 .dc-embed-drawer-body {
-    width: 80%;
+    width: 83%;
 }
 
 .dc-embed-drawer-handle{
-    width: 20%;
+    width: 17%;
     background-color: #5865F2;
     border-radius: 0px 5px 5px 0px;
 }
