--- a/controlpanel/web/templates/messages.html
+++ b/controlpanel/web/templates/messages.html
@@ -4,8 +4,8 @@
 {% block content %}
     <div class="container"> 
         <h3>Messages (for now forwarding exclusevely to 
-            <!-- <a href="https://discord.com/users/334626027961712642/">talking_crow</a> -->
-            <a href="https://discord.com/users/369546906449346560/">i_rayman_i</a>
+            <a href="https://discord.com/users/334626027961712642/">talking_crow</a>
+            <!-- <a href="https://discord.com/users/369546906449346560/">i_rayman_i</a> -->
             )</h3>
         <form action="/messages", method="post">
             <div class="form-group mt-5">
